add type data date, type data josnb
